--- a/calendar/styles.css
+++ b/calendar/styles.css
@@ -6,6 +6,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: whitesmoke;
 }
 
 header {
@@ -14,6 +15,11 @@ header {
     color: white;
     margin:0;
     padding: 5px;
+}
+
+.calendar {
+    max-width: 920px;
+    margin: auto;
 }
 
 .month {
