--- a/wordle/styles.css
+++ b/wordle/styles.css
@@ -7,6 +7,7 @@ body {
 
 h1 {
     margin: 0;
+    padding: 1rem 2rem;
 }
 
 button {
@@ -18,11 +19,28 @@ button {
 main {
     max-width: 820px;
     margin: auto;
+    position: relative;
 }
 
 header {
-    text-align: center;
     background-color: black;
+    display: flex;
+    justify-content: center;
+}
+
+.help-btn,
+.language {
+    width: 20%;
+    background-color: inherit;
+    color: inherit;
+    font-size: 2rem;
+    border: none;
+}
+
+.help-btn:hover,
+.language:hover {
+    cursor: pointer;
+    background-color: #222222;
 }
 
 .guesses {
@@ -88,4 +106,39 @@ header {
 
 .active-letter {
     border: 2px solid orange;
+}
+
+.instructions {
+    position: absolute;
+    width: 80%;
+    top: 0px;
+    left: 10%;
+    background-color: #222222;
+    color: white;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.instructions * {
+    padding: .5rem 1rem;
+}
+
+.instructions li {
+    list-style-type: none;
+}
+
+.instructions button {
+    float: right;
+    top: 0px;
+    right: 0px;
+    background-color: inherit;
+    color: inherit; 
+    border: none;
+    font-size: 1.5rem;   
+    border-radius: 0 20px;
+}
+
+.instructions button:hover {
+    cursor: pointer;
+    background-color: hsl(140, 3%, 21%); 
 }
