--- a/dice-battle/styles.css
+++ b/dice-battle/styles.css
@@ -2,6 +2,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
+    max-width: 860px;
+    margin: auto;
 }
 
 .title {
