--- a/pomodoro-timer/styles.css
+++ b/pomodoro-timer/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: aqua;
 }
 
 .timer-container {
@@ -9,6 +10,7 @@ body {
     padding: 10px 20px;
     margin: auto;
     box-shadow: 0px 0px 1px 1px grey;
+    background-color: white;
 }
 
 .timer {
